--- a/perezosoropabebes/pages/packs.html
+++ b/perezosoropabebes/pages/packs.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Packs de regalo con ropa para bebés">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | Packs</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
@@ -29,19 +30,19 @@
         <section>
             <div class="contenedorCategoriaPag">
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Salida clínica</h2>
+                    <h1 class="tarjeta__titulo">Salida clínica</h1>
                     <img src="../images/pack1.jpg" alt="Salida clínica" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Baby Shower</h2>
+                    <h1 class="tarjeta__titulo">Baby Shower</h1>
                     <img src="../images/pack3.png" alt="Baby Shower" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Básico</h2>
+                    <h1 class="tarjeta__titulo">Básico</h1>
                     <img src="../images/pack4.png" alt="Básico" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Full</h2>
+                    <h1 class="tarjeta__titulo">Full</h1>
                     <img src="../images/pack2.png" alt="Full" class="tarjeta__imagen">
                 </article>
             </div>
