--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ropa de algodón cómoda y a la moda para bebés">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | ropa para salidas</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
@@ -29,19 +30,19 @@
         <section>
             <div class="contenedorCategoriaPag">
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Conjuntos</h2>
+                    <h1 class="tarjeta__titulo">Conjuntos</h1>
                     <img src="../images/conjunto2.jpg" alt="Conjuntos" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Vestidos</h2>
+                    <h1 class="tarjeta__titulo">Vestidos</h1>
                     <img src="../images/vestido.jpg" alt="Vestidos" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Pantalones</h2>
+                    <h1 class="tarjeta__titulo">Pantalones</h1>
                     <img src="../images/pantalon2.jpg" alt="Pantalones" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Polos</h2>
+                    <h1 class="tarjeta__titulo">Polos</h1>
                     <img src="../images/polo1.jpg" alt="Polos" class="tarjeta__imagen">
                 </article>
             </div>
@@ -51,23 +52,23 @@
             <div class="contenedorProductos">
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
-                    <h3 class="producto__titulo">Conjunto 123</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Conjunto 123</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto456" class="producto__imagen">
-                    <h3 class="producto__titulo">Conjunto 456</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Conjunto 456</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
-                    <h3 class="producto__titulo">Conjunto 789</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Conjunto 789</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto012" class="producto__imagen">
-                    <h3 class="producto__titulo">Conjunto 012</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Conjunto 012</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
             </div>
         </section>
