--- a/perezosoropabebes/index.html
+++ b/perezosoropabebes/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ropa de algodón peruano para bebés">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | Home</title>
 </head>
 
 <body>
@@ -39,15 +40,15 @@
         <section>
             <div class="contenedorCategoria">
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Básicos</h2>
+                    <h1 class="tarjeta__titulo">Básicos</h1>
                     <img src="./images/portadabasicos.jpg" alt="Portada básicos" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Salidas</h2>
+                    <h1 class="tarjeta__titulo">Salidas</h1>
                     <img src="./images/portadasalidas.jpg" alt="Portada salidas" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h2 class="tarjeta__titulo">Accesorios</h2>
+                    <h1 class="tarjeta__titulo">Accesorios</h1>
                     <img src="./images/portadaaccesorios.jpg" alt="Portada accesorios" class="tarjeta__imagen">
                 </article>
             </div>
@@ -56,7 +57,7 @@
         <section>
             <div class="contenedorNosotros" data-aos="fade-up">
                 <article class="nosotros">
-                    <h2 class="nosotros__titulo">Conoce más sobre nosotros</h2>
+                    <h1 class="nosotros__titulo">Conoce más sobre nosotros</h1>
                     <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem fuga nulla iure laudantium? Soluta eaque sint vero atque dignissimos, illum alias quasi suscipit sed consequuntur praesentium qui voluptates doloremque quaerat?
                     </p>
                 </article>
