--- a/perezosoropabebes/pages/ofertas.html
+++ b/perezosoropabebes/pages/ofertas.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Las mejores ofertas de ropa de bebé de algodón peruano">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | Ofertas</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
@@ -31,23 +32,23 @@
             <div class="contenedorProductos">
                 <article class="producto">
                     <img src="../images/toallagrande.jpg" alt="Toalla grande" class="producto__imagen">
-                    <h3 class="producto__titulo">Toalla grande</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Toalla grande</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/toallachica.jpg" alt="Toalla chica" class="producto__imagen">
-                    <h3 class="producto__titulo">Toalla chica</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Toalla chica</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/apoyador.jpg" alt="Apoyador" class="producto__imagen">
-                    <h3 class="producto__titulo">Apoyador</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Apoyador</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/toallamandil.jpg" alt="Toalla mandil" class="producto__imagen">
-                    <h3 class="producto__titulo">Toalla mandil</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h2 class="producto__titulo">Toalla mandil</h2>
+                    <h3 class="producto__precio">S/XX</h3>
                 </article>
             </div>
         </section>
