--- a/perezosoropabebes/pages/suscribete.html
+++ b/perezosoropabebes/pages/suscribete.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Entérate de las últimas novedades y ofertas">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | Suscíbete</title>
 </head>
 <body>
 
