--- a/perezosoropabebes/index.html
+++ b/perezosoropabebes/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa de algodón peruano para bebés">
+    <meta property="og:title" content="La mejor ropa de algodón para bebé">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
@@ -58,8 +60,7 @@
             <div class="contenedorNosotros" data-aos="fade-up">
                 <article class="nosotros">
                     <h1 class="nosotros__titulo">Conoce más sobre nosotros</h1>
-                    <p class="nosotros__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem fuga nulla iure laudantium? Soluta eaque sint vero atque dignissimos, illum alias quasi suscipit sed consequuntur praesentium qui voluptates doloremque quaerat?
-                    </p>
+                    <p class="nosotros__texto">Somos mamá e hija con más de 20 años de experiencia en el mundo de la ropa de bebé. Hemos aprendido cada una de nuestras maternidades y confeccionamos prendas con mucho amor, pensando en la practicidad de las mamás y la comodida de los bebés</p>
                 </article>
                     <img src="./images/fundadoras.jpg" alt="Fundadoras" class="nosotros__imagen">    
             </div>
