--- a/perezosoropabebes/pages/accesorios.html
+++ b/perezosoropabebes/pages/accesorios.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Perezoso ropa bebé algodón | Accesorios">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso</title>
+    <title>Perezoso ropa bebé algodón | Accesorios</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
