--- a/perezosoropabebes/pages/ofertas.html
+++ b/perezosoropabebes/pages/ofertas.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Las mejores ofertas de ropa de bebé de algodón peruano">
+    <meta property="og:title" content="Perezoso ropa bebé algodón | Ofertas">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
