--- a/perezosoropabebes/pages/basicos.html
+++ b/perezosoropabebes/pages/basicos.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa básica de uso diario y cómoda para bebés">
+    <meta property="og:title" content="Perezoso ropa bebé algodón | Prendas Básicas">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso ropa bebé algodón | prendas básicas</title>
+    <title>Perezoso ropa bebé algodón  Prendas Básicas</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
