--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa de algodón cómoda y a la moda para bebés">
+    <meta property="og:title" content="Perezoso ropa bebé algodón | Ropa para Salidas">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso ropa bebé algodón | ropa para salidas</title>
+    <title>Perezoso ropa bebé algodón | Ropa para Salidas</title>
 </head>
 <body>
     <header><img src="../images/logoweb.jpg" alt="Logo Perezoso">
