--- a/perezosoropabebes/pages/suscribete.html
+++ b/perezosoropabebes/pages/suscribete.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Entérate de las últimas novedades y ofertas">
+    <meta property="og:title" content="Perezoso ropa bebé algodón | Suscríbete">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Perezoso ropa bebé algodón | Suscíbete</title>
+    <title>Perezoso ropa bebé algodón | Suscríbete</title>
 </head>
 <body>
 
