mejoras texto e imágenes

--- a/perezosoropabebes/index.html
+++ b/perezosoropabebes/index.html
@@ -43,15 +43,15 @@
             <div class="contenedorCategoria">
                 <article class="tarjeta">
                     <h1 class="tarjeta__titulo">Básicos</h1>
-                    <img src="./images/portadabasicos.jpg" alt="Portada básicos" class="tarjeta__imagen">
+                    <a href="./pages/basicos.html"><img src="./images/portadabasicos.jpg" alt="Portada básicos" class="tarjeta__imagen"></a>
                 </article>
                 <article class="tarjeta">
                     <h1 class="tarjeta__titulo">Salidas</h1>
-                    <img src="./images/portadasalidas.jpg" alt="Portada salidas" class="tarjeta__imagen">
+                    <a href="./pages/salidas.html"><img src="./images/portadasalidas.jpg" alt="Portada salidas" class="tarjeta__imagen"></a>
                 </article>
                 <article class="tarjeta">
                     <h1 class="tarjeta__titulo">Accesorios</h1>
-                    <img src="./images/portadaaccesorios.jpg" alt="Portada accesorios" class="tarjeta__imagen">
+                    <a href="./pages/accesorios.html"><img src="./images/portadaaccesorios.jpg" alt="Portada accesorios" class="tarjeta__imagen"></a>
                 </article>
             </div>
         </section>
