--- a/perezosoropabebes/pages/packs.html
+++ b/perezosoropabebes/pages/packs.html
@@ -54,29 +54,29 @@
             <div class="contenedorTabla">
                 <table class="tabla">
                     <tr class="tabla__filas">
-                        <th class="tabla__encabezado">Pack Básico</th>
+                        <th class="tabla__encabezado">Salida Clínica</th>
                         <th class="tabla__encabezado">Cantidad</th>
-                        <th class="tabla__encabezado">Precio</th>
-                        <th class="tabla__encabezado">Precio Pack</th>
+                        <th class="tabla__encabezado">Precio unitario</th>
+                        <th class="tabla__encabezado">Precio pack</th>
                     </tr>
 
                     <tr class="tabla__filas">
                         <td class="tabla__celdas">Bodies</td>
                         <td class="tabla__celdas">3</td>
-                        <td class="tabla__celdas">S/XX</td>
-                        <td class="tabla__celdas" rowspan="4">S/XX</td>
+                        <td class="tabla__celdas">S/19.90</td>
+                        <td class="tabla__celdas" rowspan="4">S/219</td>
                     </tr>
             
                     <tr class="tabla__filas">
                         <td class="tabla__celdas">Pantalones</td>
                         <td class="tabla__celdas">3</td>
-                        <td class="tabla__celdas">S/XX</td>
+                        <td class="tabla__celdas">S/19.90</td>
                     </tr>
 
                     <tr class="tabla__filas">
                         <td class="tabla__celdas">Enterizos</td>
                         <td class="tabla__celdas">3</td>
-                        <td class="tabla__celdas">S/XX</td>
+                        <td class="tabla__celdas">S/39.90</td>
                     </tr>
                 </table>
             </div>
