--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -54,23 +54,23 @@
             <div class="contenedorProductos">
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto 123</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h2 class="producto__titulo">Conjunto rosa NB</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto456" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto 456</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h2 class="producto__titulo">Conjunto rosa 0-3</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto 789</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h2 class="producto__titulo">Conjunto rosa 3-6</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto012" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto 012</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h2 class="producto__titulo">Conjunto rosa 6-9</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
                 </article>
             </div>
         </section>
