--- a/perezosoropabebes/pages/accesorios.html
+++ b/perezosoropabebes/pages/accesorios.html
@@ -54,22 +54,22 @@
                 <article class="producto">
                     <img src="../images/toallagrande.jpg" alt="Toalla grande" class="producto__imagen">
                     <h3 class="producto__titulo">Toalla grande</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h4 class="producto__precio">S/119.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/toallachica.jpg" alt="Toalla chica" class="producto__imagen">
                     <h3 class="producto__titulo">Toalla chica</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h4 class="producto__precio">S/99.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/apoyador.jpg" alt="Apoyador" class="producto__imagen">
                     <h3 class="producto__titulo">Apoyador</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h4 class="producto__precio">S/219.9</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/toallamandil.jpg" alt="Toalla mandil" class="producto__imagen">
                     <h3 class="producto__titulo">Toalla mandil</h3>
-                    <h4 class="producto__precio">S/XX</h4>
+                    <h4 class="producto__precio">S/119.9</h4>
                 </article>
             </div>
         </section>
