--- a/perezosoropabebes/pages/ofertas.html
+++ b/perezosoropabebes/pages/ofertas.html
@@ -35,22 +35,42 @@
                 <article class="producto">
                     <img src="../images/toallagrande.jpg" alt="Toalla grande" class="producto__imagen">
                     <h2 class="producto__titulo">Toalla grande</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h3 class="producto__precio">S/119.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/toallachica.jpg" alt="Toalla chica" class="producto__imagen">
                     <h2 class="producto__titulo">Toalla chica</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h3 class="producto__precio">S/99.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/apoyador.jpg" alt="Apoyador" class="producto__imagen">
                     <h2 class="producto__titulo">Apoyador</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h3 class="producto__precio">S/219.90</h3>
                 </article>
                 <article class="producto">
                     <img src="../images/toallamandil.jpg" alt="Toalla mandil" class="producto__imagen">
                     <h2 class="producto__titulo">Toalla mandil</h2>
-                    <h3 class="producto__precio">S/XX</h3>
+                    <h3 class="producto__precio">S/119.9</h3>
+                </article>
+                <article class="producto">
+                    <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
+                    <h2 class="producto__titulo">Conjunto rosa NB</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
+                </article>
+                <article class="producto">
+                    <img src="../images/enterizobasicos.jpg" alt="Enterizo123" class="producto__imagen">
+                    <h2 class="producto__titulo">Enterizo gris NB</h2>
+                    <h3 class="producto__precio">S/39.90</h3>
+                </article>
+                <article class="producto">
+                    <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
+                    <h2 class="producto__titulo">Conjunto rosa 3-6</h2>
+                    <h3 class="producto__precio">S/59.90</h3>
+                </article>
+                <article class="producto">
+                    <img src="../images/enterizobasicos.jpg" alt="Enterizo012" class="producto__imagen">
+                    <h2 class="producto__titulo">Enterizo gris 6-9</h2>
+                    <h3 class="producto__precio">S/39.90</h3>
                 </article>
             </div>
         </section>
