--- a/perezosoropabebes/pages/accesorios.html
+++ b/perezosoropabebes/pages/accesorios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Perezoso ropa bebé algodón | Accesorios">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -27,6 +28,9 @@
         </nav>
     </header>   
     <main>
+        <section class="encabezado">
+            <h1>Comprar Accesorios</h1>
+        </section>
 
         <section>
             <div class="contenedorCategoriaPag">
@@ -87,8 +91,8 @@
             <li><a href="suscribete.html">Suscríbete</a></li>
             <li><Contáctanos:></li>
                 <ul>
-                    <li><a href="">IG:@perezoso</a></li>
-                    <li><a href="">FB: Perezoso</a></li>
+                    <li><a href="https://www.instagram.com/">IG:@perezoso</a></li>
+                    <li><a href="https://www.facebook.com/">FB: Perezoso</a></li>
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
