--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa de algodón cómoda y a la moda para bebés">
     <meta property="og:title" content="Perezoso ropa bebé algodón | Ropa para Salidas">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -28,23 +29,26 @@
         </nav>
     </header>   
     <main>
+        <section class="encabezado">
+            <h1>Comprar ropa para salir</h1>
+        </section>
 
         <section>
             <div class="contenedorCategoriaPag">
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Conjuntos</h1>
+                    <h2 class="tarjeta__titulo">Conjuntos</h2>
                     <img src="../images/conjunto2.jpg" alt="Conjuntos" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Vestidos</h1>
+                    <h2 class="tarjeta__titulo">Vestidos</h2>
                     <img src="../images/vestido.jpg" alt="Vestidos" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Pantalones</h1>
+                    <h2 class="tarjeta__titulo">Pantalones</h2>
                     <img src="../images/pantalon2.jpg" alt="Pantalones" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Polos</h1>
+                    <h2 class="tarjeta__titulo">Polos</h2>
                     <img src="../images/polo1.jpg" alt="Polos" class="tarjeta__imagen">
                 </article>
             </div>
@@ -54,23 +58,23 @@
             <div class="contenedorProductos">
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa NB</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa NB</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto456" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa 0-3</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa 0-3</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa 3-6</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa 3-6</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto012" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa 6-9</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa 6-9</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
             </div>
         </section>
@@ -88,8 +92,8 @@
             <li><a href="suscribete.html">Suscríbete</a></li>
             <li><Contáctanos:></li>
                 <ul>
-                    <li><a href="">IG:@perezoso</a></li>
-                    <li><a href="">FB: Perezoso</a></li>
+                    <li><a href="https://www.instagram.com/">IG:@perezoso</a></li>
+                    <li><a href="https://www.facebook.com/">FB: Perezoso</a></li>
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
