--- a/perezosoropabebes/index.html
+++ b/perezosoropabebes/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ropa de algodón peruano para bebés">
     <meta property="og:title" content="La mejor ropa de algodón para bebé">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -42,15 +43,15 @@
         <section>
             <div class="contenedorCategoria">
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Básicos</h1>
+                    <h2 class="tarjeta__titulo">Básicos</h2>
                     <a href="./pages/basicos.html"><img src="./images/portadabasicos.jpg" alt="Portada básicos" class="tarjeta__imagen"></a>
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Salidas</h1>
+                    <h2 class="tarjeta__titulo">Salidas</h2>
                     <a href="./pages/salidas.html"><img src="./images/portadasalidas.jpg" alt="Portada salidas" class="tarjeta__imagen"></a>
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Accesorios</h1>
+                    <h2 class="tarjeta__titulo">Accesorios</h2>
                     <a href="./pages/accesorios.html"><img src="./images/portadaaccesorios.jpg" alt="Portada accesorios" class="tarjeta__imagen"></a>
                 </article>
             </div>
@@ -59,8 +60,8 @@
         <section>
             <div class="contenedorNosotros" data-aos="fade-up">
                 <article class="nosotros">
-                    <h1 class="nosotros__titulo">Conoce más sobre nosotros</h1>
-                    <p class="nosotros__texto">Somos mamá e hija con más de 20 años de experiencia en el mundo de la ropa de bebé. Hemos aprendido cada una de nuestras maternidades y confeccionamos prendas con mucho amor, pensando en la practicidad de las mamás y la comodida de los bebés</p>
+                    <h2 class="nosotros__titulo">Conoce más sobre nosotros</h2>
+                    <p class="nosotros__texto">Somos mamá e hija con más de 20 años de experiencia en el mundo de la ropa de bebé. Hemos aprendido cada una de nuestras maternidades y confeccionamos prendas con mucho amor, pensando en la practicidad de las mamás y la comodidad de los bebés</p>
                 </article>
                     <img src="./images/fundadoras.jpg" alt="Fundadoras" class="nosotros__imagen">    
             </div>
@@ -79,8 +80,8 @@
             <li><a href="./pages/suscribete.html">Suscríbete</a></li>
             <li><Contáctanos:></li>
                 <ul>
-                    <li><a href="">IG:@perezoso</a></li>
-                    <li><a href="">FB: Perezoso</a></li>
+                    <li><a href="https://www.instagram.com/">IG:@perezoso</a></li>
+                    <li><a href="https://www.facebook.com/">FB: Perezoso</a></li>
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
                 </ul>
