--- a/perezosoropabebes/pages/ofertas.html
+++ b/perezosoropabebes/pages/ofertas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Las mejores ofertas de ropa de bebé de algodón peruano">
     <meta property="og:title" content="Perezoso ropa bebé algodón | Ofertas">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -28,49 +29,51 @@
         </nav>
     </header>   
     <main>
+        <section class="encabezado">
+            <h1>Comprar Ofertas</h1>
+        </section>
 
-        
         <section>
             <div class="contenedorProductos">
                 <article class="producto">
                     <img src="../images/toallagrande.jpg" alt="Toalla grande" class="producto__imagen">
-                    <h2 class="producto__titulo">Toalla grande</h2>
-                    <h3 class="producto__precio">S/119.90</h3>
+                    <h3 class="producto__titulo">Toalla grande</h3>
+                    <h4 class="producto__precio">S/119.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/toallachica.jpg" alt="Toalla chica" class="producto__imagen">
-                    <h2 class="producto__titulo">Toalla chica</h2>
-                    <h3 class="producto__precio">S/99.90</h3>
+                    <h3 class="producto__titulo">Toalla chica</h3>
+                    <h4 class="producto__precio">S/99.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/apoyador.jpg" alt="Apoyador" class="producto__imagen">
-                    <h2 class="producto__titulo">Apoyador</h2>
-                    <h3 class="producto__precio">S/219.90</h3>
+                    <h3 class="producto__titulo">Apoyador</h3>
+                    <h4 class="producto__precio">S/219.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/toallamandil.jpg" alt="Toalla mandil" class="producto__imagen">
-                    <h2 class="producto__titulo">Toalla mandil</h2>
-                    <h3 class="producto__precio">S/119.9</h3>
+                    <h3 class="producto__titulo">Toalla mandil</h3>
+                    <h4 class="producto__precio">S/119.9</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa NB</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa NB</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/enterizobasicos.jpg" alt="Enterizo123" class="producto__imagen">
-                    <h2 class="producto__titulo">Enterizo gris NB</h2>
-                    <h3 class="producto__precio">S/39.90</h3>
+                    <h3 class="producto__titulo">Enterizo gris NB</h3>
+                    <h4 class="producto__precio">S/39.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
-                    <h2 class="producto__titulo">Conjunto rosa 3-6</h2>
-                    <h3 class="producto__precio">S/59.90</h3>
+                    <h3 class="producto__titulo">Conjunto rosa 3-6</h3>
+                    <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
                     <img src="../images/enterizobasicos.jpg" alt="Enterizo012" class="producto__imagen">
-                    <h2 class="producto__titulo">Enterizo gris 6-9</h2>
-                    <h3 class="producto__precio">S/39.90</h3>
+                    <h3 class="producto__titulo">Enterizo gris 6-9</h3>
+                    <h4 class="producto__precio">S/39.90</h4>
                 </article>
             </div>
         </section>
@@ -88,8 +91,8 @@
             <li><a href="suscribete.html">Suscríbete</a></li>
             <li><Contáctanos:></li>
                 <ul>
-                    <li><a href="">IG:@perezoso</a></li>
-                    <li><a href="">FB: Perezoso</a></li>
+                    <li><a href="https://www.instagram.com/">IG:@perezoso</a></li>
+                    <li><a href="https://www.facebook.com/">FB: Perezoso</a></li>
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
