--- a/perezosoropabebes/pages/packs.html
+++ b/perezosoropabebes/pages/packs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Packs de regalo con ropa para bebés">
     <meta property="og:title" content="Perezoso ropa bebé algodón | Packs">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -28,23 +29,26 @@
         </nav>
     </header>   
     <main>
+        <section class="encabezado">
+            <h1>Comprar Packs</h1>
+        </section>
 
         <section>
             <div class="contenedorCategoriaPag">
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Salida clínica</h1>
+                    <h2 class="tarjeta__titulo">Salida clínica</h2>
                     <img src="../images/pack1.jpg" alt="Salida clínica" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Baby Shower</h1>
+                    <h2 class="tarjeta__titulo">Baby Shower</h2>
                     <img src="../images/pack3.png" alt="Baby Shower" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Básico</h1>
+                    <h2 class="tarjeta__titulo">Básico</h2>
                     <img src="../images/pack4.png" alt="Básico" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
-                    <h1 class="tarjeta__titulo">Full</h1>
+                    <h2 class="tarjeta__titulo">Full</h2>
                     <img src="../images/pack2.png" alt="Full" class="tarjeta__imagen">
                 </article>
             </div>
@@ -95,8 +99,8 @@
             <li><a href="suscribete.html">Suscríbete</a></li>
             <li><Contáctanos:></li>
                 <ul>
-                    <li><a href="">IG:@perezoso</a></li>
-                    <li><a href="">FB: Perezoso</a></li>
+                    <li><a href="https://www.instagram.com/">IG:@perezoso</a></li>
+                    <li><a href="https://www.facebook.com/">FB: Perezoso</a></li>
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
