--- a/perezosoropabebes/pages/suscribete.html
+++ b/perezosoropabebes/pages/suscribete.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Entérate de las últimas novedades y ofertas">
     <meta property="og:title" content="Perezoso ropa bebé algodón | Suscríbete">
+    <meta property="og:site_name" content="Perezoso">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
