--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -57,22 +57,22 @@
         <section>
             <div class="contenedorProductos">
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa NB" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa NB</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto456" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa 0-3" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa 0-3</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa 3-6" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa 3-6</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto012" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa 6-9" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa 6-9</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
