--- a/perezosoropabebes/pages/ofertas.html
+++ b/perezosoropabebes/pages/ofertas.html
@@ -56,22 +56,22 @@
                     <h4 class="producto__precio">S/119.9</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto123" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa NB" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa NB</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/enterizobasicos.jpg" alt="Enterizo123" class="producto__imagen">
+                    <img src="../images/enterizobasicos.jpg" alt="Enterizo gris NB" class="producto__imagen">
                     <h3 class="producto__titulo">Enterizo gris NB</h3>
                     <h4 class="producto__precio">S/39.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/conjunto.jpg" alt="Conjunto789" class="producto__imagen">
+                    <img src="../images/conjunto.jpg" alt="Conjunto rosa 3-6" class="producto__imagen">
                     <h3 class="producto__titulo">Conjunto rosa 3-6</h3>
                     <h4 class="producto__precio">S/59.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/enterizobasicos.jpg" alt="Enterizo012" class="producto__imagen">
+                    <img src="../images/enterizobasicos.jpg" alt="Enterizo gris 6-9" class="producto__imagen">
                     <h3 class="producto__titulo">Enterizo gris 6-9</h3>
                     <h4 class="producto__precio">S/39.90</h4>
                 </article>
