--- a/perezosoropabebes/pages/packs.html
+++ b/perezosoropabebes/pages/packs.html
@@ -37,19 +37,19 @@
             <div class="contenedorCategoriaPag">
                 <article class="tarjeta">
                     <h2 class="tarjeta__titulo">Salida clínica</h2>
-                    <img src="../images/pack1.jpg" alt="Salida clínica" class="tarjeta__imagen">
+                    <img src="../images/pack1.jpg" alt="Pack Salida clínica" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
                     <h2 class="tarjeta__titulo">Baby Shower</h2>
-                    <img src="../images/pack3.png" alt="Baby Shower" class="tarjeta__imagen">
+                    <img src="../images/pack3.png" alt="Pack Baby Shower" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
                     <h2 class="tarjeta__titulo">Básico</h2>
-                    <img src="../images/pack4.png" alt="Básico" class="tarjeta__imagen">
+                    <img src="../images/pack4.png" alt="Pack Básico" class="tarjeta__imagen">
                 </article>
                 <article class="tarjeta">
                     <h2 class="tarjeta__titulo">Full</h2>
-                    <img src="../images/pack2.png" alt="Full" class="tarjeta__imagen">
+                    <img src="../images/pack2.png" alt="Pack Full" class="tarjeta__imagen">
                 </article>
             </div>
         </section>
