--- a/perezosoropabebes/index.html
+++ b/perezosoropabebes/index.html
@@ -66,6 +66,16 @@
                     <img src="./images/fundadoras.jpg" alt="Fundadoras" class="nosotros__imagen">    
             </div>
         </section>
+
+        <section>
+            <div class="contenedorNosotros" data-aos="fade-up">
+                <article class="nosotros">
+                    <h2 class="nosotros__titulo">¿Por qué algodón peruano?</h2>
+                    <p class="nosotros__texto">La piel de nuestros bebés es muy delicada y el algodón es un material que evita irritaciones y alergias. Además, mantiene la temperatura corporal correcta para los bebés y les brinda una sensación de confort.</p>
+                </article>
+                    <img src="./images/algodon.jpg" alt="Algodón" class="nosotros__imagen">    
+            </div>
+        </section>
     </main>
 
     <footer>
