linkeos footer ficticios

--- a/perezosoropabebes/pages/accesorios.html
+++ b/perezosoropabebes/pages/accesorios.html
@@ -66,7 +66,7 @@
                     <h4 class="producto__precio">S/99.90</h4>
                 </article>
                 <article class="producto">
-                    <img src="../images/apoyador.jpg" alt="Apoyador" class="producto__imagen">
+                    <img src="../images/apoyador.jpg" alt="Apoyador tina" class="producto__imagen">
                     <h3 class="producto__titulo">Apoyador</h3>
                     <h4 class="producto__precio">S/219.9</h4>
                 </article>
@@ -81,10 +81,10 @@
 
     <footer>
         <ul>
-            <li><a href="">Términos y Condiciones</a></li>
-            <li><a href="">Cambios y Devoluciones</a></li>
-            <li><a href="">Envíos</a></li>
-            <li><a href="">Libro de Reclamaciones</a></li>
+            <li><a href="https://www.shopify.com/tools/policy-generator/terms-and-conditions">Términos y Condiciones</a></li>
+            <li><a href="https://es.shopify.com/herramientas/generador-politica-de-privacidad/reembolso">Cambios y Devoluciones</a></li>
+            <li><a href="https://www.generadordepoliticas.com/politica-de-envio">Envíos</a></li>
+            <li><a href="https://www.jotform.com/es/form-templates/libro-de-reclamaciones">Libro de Reclamaciones</a></li>
 
         </ul>
         <ul>
@@ -96,9 +96,7 @@
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
-                </ul>
-
-            
+                </ul>           
         </ul>
     </footer>
     
