--- a/perezosoropabebes/pages/salidas.html
+++ b/perezosoropabebes/pages/salidas.html
@@ -82,10 +82,10 @@
 
     <footer>
         <ul>
-            <li><a href="">Términos y Condiciones</a></li>
-            <li><a href="">Cambios y Devoluciones</a></li>
-            <li><a href="">Envíos</a></li>
-            <li><a href="">Libro de Reclamaciones</a></li>
+            <li><a href="https://www.shopify.com/tools/policy-generator/terms-and-conditions">Términos y Condiciones</a></li>
+            <li><a href="https://es.shopify.com/herramientas/generador-politica-de-privacidad/reembolso">Cambios y Devoluciones</a></li>
+            <li><a href="https://www.generadordepoliticas.com/politica-de-envio">Envíos</a></li>
+            <li><a href="https://www.jotform.com/es/form-templates/libro-de-reclamaciones">Libro de Reclamaciones</a></li>
 
         </ul>
         <ul>
@@ -97,9 +97,7 @@
                     <li>email: perezoso@gmail.com</li>
                     <li>Celular: 986698289</li>
 
-                </ul>
-
-            
+                </ul>          
         </ul>
     </footer>
     
