--- a/perezosoropabebes/pages/basicos.html
+++ b/perezosoropabebes/pages/basicos.html
@@ -90,10 +90,10 @@
     <footer>
         <div class="footerIzq">
             <ul class="footerIzq__links">
-                <li><a href="">Términos y Condiciones</a></li>
-                <li><a href="">Cambios y Devoluciones</a></li>
-                <li><a href="">Envíos</a></li>
-                <li><a href="">Libro de Reclamaciones</a></li>
+                <li><a href="https://www.shopify.com/tools/policy-generator/terms-and-conditions">Términos y Condiciones</a></li>
+                <li><a href="https://es.shopify.com/herramientas/generador-politica-de-privacidad/reembolso">Cambios y Devoluciones</a></li>
+                <li><a href="https://www.generadordepoliticas.com/politica-de-envio">Envíos</a></li>
+                <li><a href="https://www.jotform.com/es/form-templates/libro-de-reclamaciones">Libro de Reclamaciones</a></li>
 
             </ul>
         </div>
